feat: -created receita and despesa forms -created input-number component -created receita and despesa services, models and facades -created receita-sources and despesa-category enums

--- a/GestaoFinanceira/libs/feature/financas/src/lib/financas/receitas/src/lib/receitas/receitas.component.html
+++ b/GestaoFinanceira/libs/feature/financas/src/lib/financas/receitas/src/lib/receitas/receitas.component.html
@@ -1,1 +1,23 @@
-<p>Receitas works!</p>
+<lib-card>
+    <a [routerLink]="['/app/users']" class="absolute top-0 left-0 mt-2 ml-2">
+      <p class="description flex items-center gap-1 link">
+        <i class="pi pi-fw pi-arrow-left" style="font-size: 0.75rem"></i> Voltar
+      </p>
+    </a>
+  
+    <h1 class="title text-center">
+      {{ title }}
+    </h1>
+    <p class="description text-center mt-2">
+      {{ description }}
+    </p>
+  
+    <lib-receita-form
+      class="mt-6"
+      [loading]="loading"
+      [receita]="receita"
+      [submitLabel]="submitLabel"
+      (receitaSubmit)="onSubmit($event)"
+    ></lib-receita-form>
+  </lib-card>
+  
