--- a/GestaoFinanceira/libs/feature/sign-in/src/lib/sign-in/sign-in.component.html
+++ b/GestaoFinanceira/libs/feature/sign-in/src/lib/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="w-full h-full min-h-screen secondary-background flex">
   <div
     class="h-full min-h-screen relative hidden w-1/2 justify-center bg-cover bg-bottom bg-no-repeat lg:flex"
-    style="background-image: url(/images/farm.jpg)"
+    style="background-image: url(/images/gestao.jpg)"
   >
     <div
       class="w-full h-full bg-black absolute inset-0 bg-opacity-50 z-10"
@@ -9,7 +9,7 @@
   </div>
 
   <div
-    class="z-0 flex w-full items-center justify-center px-0 md:px-16 lg:w-1/2 bg-cover bg-bottom bg-no-repeat min-h-dvh relative bg-[url('/images/farm.jpg')] lg:bg-none"
+    class="z-0 flex w-full items-center justify-center px-0 md:px-16 lg:w-1/2 bg-cover bg-bottom bg-no-repeat min-h-dvh relative bg-[url('/images/gestao.jpg')] lg:bg-none"
   >
     <div
       class="w-full h-full bg-black absolute inset-0 bg-opacity-50 z-10 lg:hidden"
