--- a/GestaoFinanceira/libs/feature/financas/src/lib/financas/list-despesas/src/lib/list-despesas/list-despesas.component.html
+++ b/GestaoFinanceira/libs/feature/financas/src/lib/financas/list-despesas/src/lib/list-despesas/list-despesas.component.html
@@ -1,1 +1,3 @@
-<p>ListDespesas works!</p>
+<div class="flex justify-center">
+    <lib-button [label]="'Adicionar Despesas'" [routerLink]="'/app/financas/despesas/create'"></lib-button>
+</div>
