--- a/GestaoFinanceira/libs/feature/financas/src/lib/financas/list-receitas/src/lib/list-receitas/list-receitas.component.html
+++ b/GestaoFinanceira/libs/feature/financas/src/lib/financas/list-receitas/src/lib/list-receitas/list-receitas.component.html
@@ -1,1 +1,3 @@
-<p>ListReceitas works!</p>
+<div class="flex justify-center">
+    <lib-button [label]="'Adicionar Receitas'" [routerLink]="'/app/financas/receitas/create'"></lib-button>
+</div>
