--- a/GestaoFinanceira/libs/feature/home/src/lib/home/home.component.html
+++ b/GestaoFinanceira/libs/feature/home/src/lib/home/home.component.html
@@ -18,7 +18,7 @@
     </div>
   </header>
   <main
-    class="flex-1 flex items-center justify-center relative bg-[url(/images/farm.jpg)] bg-cover bg-center"
+    class="flex-1 flex items-center justify-center relative bg-[url(/images/gestao.jpg)] bg-cover bg-center"
   >
     <div class="absolute inset-0 bg-black opacity-50 z-0"></div>
 
