feat: -implemented list-receitas CRUD -removed category and sources enums

--- a/GestaoFinanceira/libs/feature/dashboard/src/lib/dashboard/dashboard.component.html
+++ b/GestaoFinanceira/libs/feature/dashboard/src/lib/dashboard/dashboard.component.html
@@ -3,11 +3,11 @@
     <img src="/images/logo.svg" alt="Logo" />
   </div>
 
-  <h1 class="title mt-10 text-center">Bem vindo ao HandsOn App</h1>
+  <h1 class="title mt-10 text-center">Bem vindo ao Gestão Financeira</h1>
   <p class="text mt-2 text-center">
-    Este é um exemplo de aplicação Angular Monorepo com Nx
+    Esta é uma aplicação para organizar suas finanças
   </p>
   <p class="description mt-6 text-center">
-    Para começar, navegue até a página de usuários
+    Para começar, selecione gerenciar finanças
   </p>
 </div>
