--- a/GestaoFinanceira/libs/feature/financas/src/lib/financas/receitas/src/lib/receitas/receitas.component.html
+++ b/GestaoFinanceira/libs/feature/financas/src/lib/financas/receitas/src/lib/receitas/receitas.component.html
@@ -1,5 +1,5 @@
 <lib-card>
-    <a [routerLink]="['/app/users']" class="absolute top-0 left-0 mt-2 ml-2">
+    <a [routerLink]="['/app/financas/receitas']" class="absolute top-0 left-0 mt-2 ml-2">
       <p class="description flex items-center gap-1 link">
         <i class="pi pi-fw pi-arrow-left" style="font-size: 0.75rem"></i> Voltar
       </p>
