--- a/GestaoFinanceira/libs/feature/home/src/lib/home/home.component.html
+++ b/GestaoFinanceira/libs/feature/home/src/lib/home/home.component.html
@@ -4,7 +4,7 @@
   >
     <div class="flex items-center gap-3">
       <img src="/images/logo.svg" alt="logo" class="h-12" />
-      <p class="text font-bold uppercase">Gestão Agrícola</p>
+      <p class="text font-bold uppercase">Gestão Financeira</p>
     </div>
 
     <div class="flex items-center gap-6">
@@ -23,8 +23,8 @@
     <div class="absolute inset-0 bg-black opacity-50 z-0"></div>
 
     <div class="z-10 text-center">
-      <h1 class="title text-5xl text-white">Hands On</h1>
-      <p class="text text-lg text-white mt-2">Plataforma em construção :D</p>
+      <h1 class="title text-5xl text-white">Gestão Financeira</h1>
+      <p class="text text-lg text-white mt-2">Consulte suas finanças de forma rápida e prática</p>
     </div>
   </main>
   <footer
