--- a/GestaoFinanceira/libs/master-page/src/lib/master-page/header/src/lib/header/header.component.html
+++ b/GestaoFinanceira/libs/master-page/src/lib/master-page/header/src/lib/header/header.component.html
@@ -4,7 +4,7 @@
   <div class="min-w-max">
     <a routerLink="/app" class="flex items-center gap-2">
       <img src="/images/logo.svg" alt="logo" class="h-10" />
-      <p class="text font-bold uppercase max-md:hidden">Gestão Agrícola</p>
+      <p class="text font-bold uppercase max-md:hidden">Gestão Financeira</p>
     </a>
   </div>
 
