--- a/GestaoFinanceira/libs/feature/financas/src/lib/financas/despesas/src/lib/despesas/despesas.component.html
+++ b/GestaoFinanceira/libs/feature/financas/src/lib/financas/despesas/src/lib/despesas/despesas.component.html
@@ -1,1 +1,23 @@
-<p>Despesas works!</p>
+<lib-card>
+    <a [routerLink]="['/app/financas/despesas']" class="absolute top-0 left-0 mt-2 ml-2">
+      <p class="description flex items-center gap-1 link">
+        <i class="pi pi-fw pi-arrow-left" style="font-size: 0.75rem"></i> Voltar
+      </p>
+    </a>
+  
+    <h1 class="title text-center">
+      {{ title }}
+    </h1>
+    <p class="description text-center mt-2">
+      {{ description }}
+    </p>
+  
+    <lib-despesa-form
+      class="mt-6"
+      [loading]="loading"
+      [despesa]="despesa"
+      [submitLabel]="submitLabel"
+      (despesaSubmit)="onSubmit($event)"
+    ></lib-despesa-form>
+  </lib-card>
+  
