--- a/GestaoFinanceira/libs/shared/ui/src/lib/modules/despesa-form/despesa-form.component.html
+++ b/GestaoFinanceira/libs/shared/ui/src/lib/modules/despesa-form/despesa-form.component.html
@@ -21,7 +21,7 @@
       id="descricao"
       label="Descrição"
       type="text"
-      placeholder="ex. Investimento"
+      placeholder="ex. Conta de água"
       [required]="true"
       [fluid]="true"
       [minlength]="1"
