--- a/GestaoFinanceira/libs/shared/ui/src/lib/modules/receita-form/receita-form.component.html
+++ b/GestaoFinanceira/libs/shared/ui/src/lib/modules/receita-form/receita-form.component.html
@@ -53,6 +53,14 @@
       [filter]="true"
       class="w-full"
     ></lib-select>
+
+    <lib-upload-file
+      id="file"
+      chooseLabel="Selecione um arquivo"
+      formControlName = "file"
+      [control] = "file"
+    >
+    </lib-upload-file>
   </div>
 
   <lib-button
