--- a/GestaoFinanceira/libs/shared/ui/src/lib/components/uploadFile/uploadFile.component.html
+++ b/GestaoFinanceira/libs/shared/ui/src/lib/components/uploadFile/uploadFile.component.html
@@ -9,6 +9,7 @@
     [maxFileSize] = "maxFileSize"
     [auto] = "auto"
     (onSelect)="onFileSelect($event)"
+    class="file-upload-basic"
     >
     </p-fileupload>
     <div  *ngIf="fileName" class="card m-0 p-4 flex flex-col rounded-xl border border-surface items-center gap-4">
